# homelab

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  flake.nix  pyproject.toml
docs/: OVERVIEW.md  PROJECT_PLAN.md  secrets.md  vm-testing-dns.md
docs/services/: akkudoktor-eos.md  alloy.md  authelia.md  backup.md  caddy.md  camera-nvr.md  cert-monitoring.md  energy-scheduler.md  eos-connect.md  evcc.md  frigate-notifier.md  frigate.md  grafana.md  homeassistant.md  homepage.md  installation.md  (+10 more)
lib/: ssh-keys.nix
scripts/: build-installer-iso.sh  check-energy-ui-browser.sh  energy-scheduler-demo.json  install-server.sh  nix-build-docker.sh  run-energy-ui-demo.sh  run-vm-docker.sh  smoke-test-services.sh
secrets/: authelia-jwt-secret.age  authelia-oidc-hmac-secret.age  authelia-oidc-issuer-private-key.age  authelia-session-secret.age  authelia-storage-encryption-key.age  authelia-users.age  cloudflare-api-token.age  cloudflare-api-token.env.example  evcc-admin-password.age  evcc-tesla.env.age  frigate-camera2-detect-url.age  frigate-camera2-record-url.age  frigate-notifier-smtp-env.age  grafana-admin-password.age  grafana-oidc-client-secret.age  homeassistant-admin-password.age  mqtt-eos-connect-password.age  mqtt-evcc-password.age  mqtt-frigate-password.age  mqtt-homeassistant-password.age  mqtt-zigbee2mqtt-password.age  nas-guest-password.age  nas-jankaifer-password.age  openclaw.env.age  restic-password.age  restic-repository-env.age  restic-repository.env.example  secrets.nix  tailscale-auth-key.age  victron-einstein-mqtt-password.age  wifi-password.age
(+97 files in other folders)
