[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-scheduler"
version = "0.1.0"
description = "Local energy scheduling daemon for the homelab"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pulp>=2.8,<3",
]

[project.scripts]
energy-scheduler = "energy_scheduler.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
